--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <!-- [START css] -->
     <link type="text/css" rel="stylesheet" href="/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <script src="http://code.jquery.com/jquery-latest.min.js"
+        type="text/javascript"></script>
+      <script type="text/javascript">
+
+   		function clicked(item) {
+    		$(item).find("p").toggle(100)
+   		}
+  	  </script>
     <!-- [END css] -->
     <style type="text/css">
       body {
@@ -30,7 +38,27 @@
         margin-top: 10px;
         overflow: scroll;
       }
+      hr { 
+	    display: block;
+	    margin-top: 0.5em;
+	    margin-bottom: 0.5em;
+	    margin-left: auto;
+	    margin-right: auto;
+	    border-style: inset;
+	    border-width: 1px;
+	  }
+	  html {
+		overflow: -moz-scrollbars-vertical; 
+		overflow-y: scroll;
+	  }
+	  .details {
+	  	width: 20%;
+	  }
+
     </style>
+    <script>
+    	var counter = 0
+    </script>
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -41,44 +69,62 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">App Engine Guestbook</a>
-          <div class="nav-collapse collapse pull-right">
-            <a href="{{ url|safe }}" class="btn">{{ url_linktext }}</a>
-          </div>
+          <a class="brand" href="#">Guestbook</a>
         </div>
       </div>
     </div>
     <div class="container">
-      <!-- [START greetings] -->
-      {% for greeting in greetings %}
-      <div class="row">
-        {% if greeting.author %}
-          <b>{{ greeting.author.email }}
-            {% if user and user.user_id() == greeting.author.identity %}
-              (You)
-            {% endif %}
-          </b> wrote:
-        {% else %}
-          An anonymous person wrote:
-        {% endif %}
-        <blockquote>{{ greeting.content }}</blockquote>
-      </div>
-      {% endfor %}
-      <!-- [END greetings] -->
-
-      <form action="/sign?guestbook_name={{ guestbook_name }}" method="post">
+      
+      <!--<form action="/sign?guestbook_name={{ guestbook_name }}" method="post">
         <div><textarea name="content" class="input-block-level" rows="3"></textarea></div>
         <div><input type="submit" class="btn btn-large btn-primary" value="Sign Guestbook"></div>
       </form>
-
-      <hr>
-
-      <form>Guestbook name:
-        <input value="{{ guestbook_name }}" name="guestbook_name">
-        <input type="submit" value="switch">
-      </form>
-
-      <a href="{{ url|safe }}">{{ url_linktext }}</a>
+      -->
+      <div style="display: inline-flex; position: relative">
+      <form role="form" action="/sign" method="post">
+		  <div class="form-group">
+		    <label for="guestbook_first_name">First name:</label>
+		    <input type="text" class="form-control" name="guestbook_first_name" value="{{ guestbook_first_name }}">
+		  </div>
+		  <div class="form-group">
+		    <label for="guestbook_last_name">Last name:</label>
+		    <input type="text" class="form-control" name="guestbook_last_name" value="{{ guestbook_last_name }}">
+		  </div>
+		  <div class="form-group">
+		    <label for="guestbook_dob">Date of Birth:</label>
+		    <input type="text" class="form-control" name="guestbook_dob" value="{{ guestbook_dob }}">
+		  </div>
+		  <div class="form-group">
+		    <label for="guestbook_email">Email Address:</label>
+		    <input type="email" class="form-control" name="guestbook_email" value="{{ guestbook_email }}">
+		  </div>
+		  <div class="form-group">
+		    <label for="guestbook_pwd">Password:</label>
+		    <input type="password" class="form-control" name="guestbook_pwd" value="{{ guestbook_pwd }}">
+		  </div>
+		  <div class="checkbox">
+		    <label><input type="checkbox">Remember me</label>
+		  </div>
+		  <button type="submit" class="btn btn-default">Submit</button>
+	  </form>
+	  </div>
+	  <hr><br>
+      <div>
+      	  <p>List of people who've entered their details in the guestbook</p>
+      	  <br><br>
+      	  {% for signature in signatures %}
+      	  	<div class="details" onclick="clicked(this);" style="inline">
+      	  		First name:{{ signature.first_name }}
+      	  		<img src="https://image.freepik.com/free-icon/expand-button_318-76533.png" height="22" width="22" style="padding-left:10px">
+      	  		<br>
+	      	  	<p style="display:none">Last name:{{ signature.last_name }}</p>
+	      	  	<p style="display:none">Date of Birth:{{ signature.dob }}</p>
+	      	  	<p style="display:none">Email:{{ signature.email }}</p>
+	      	  	<p style="display:none">Hashed password:{{ signature.pwd }}</p>
+	      	  	<br>
+      	  	</div>
+      	  {% endfor %}
+      </div>
     </div>
   </body>
 </html>
